fix navbar tab overflowing on hover for firefox

--- a/app/assets/stylesheets/nav/navbar.scss
+++ b/app/assets/stylesheets/nav/navbar.scss
@@ -2,7 +2,7 @@
   color: #fff;
   background: #22313F;
   font-size: 14px;
-  height: 34px;
+  height: 36px;
 }
 
 .base > li {
